--- a/index.html
+++ b/index.html
@@ -245,5 +245,41 @@
             </div>
         </div>
     </section>
+    <section id="contacto">
+        <div class="u-wrapper">
+            <form class="c-form" action="">
+                <h3 class="c-form__title" >Agenda tu cita</h3>
+                <p class="c-form__description" ><strong>¡No hagas filas!</strong> En menos de 1 minuto puedes agendar tu cita para verificar. Es fácil y rápido; solo necesitamos un par de datos tuyos y nosotros nos pondremos en contacto contigo para confirmar tu cita lo más pronto posible.</p>
+                <label class="c-form__label" for="">Nombre*:</label>
+                <input class="c-form__input" type="text" name="" id="" required>
+                <div class="c-form__input-divider">
+                    <div class="c-form__input-division">
+                        <label class="c-form__label" for="">Marca y Modelo del vehículo:</label>
+                        <input class="c-form__input" type="text" name="nombre" id="">
+
+                    </div>
+                    <div class="c-form__input-division">
+                        <label class="c-form__label">Terminación de placa:</label>
+                        <input class="c-form__input" type="number" name="placa" id="" required>
+                    </div>
+                </div>
+                <div class="c-form__input-divider">
+                    <div class="c-form__input-division">
+                        <label class="c-form__label">Correo electrónico:</label>
+                        <input class="c-form__input" type="email" name="correo" id="" required>
+                    </div>
+                    <div class="c-form__input-division">
+                        <label class="c-form__label">Número de telefono/celular*:</label>
+                        <input class="c-form__input" type="tel" name="telefono" id="" required>
+                    </div>
+                </div>
+                <label class="c-form__label">Fecha y hora que te gustaría tu cita*:</label>
+                <input class="c-form__input" type="text" name="fecha" id="" required>
+                <div class="c-form__button-container">
+                    <input class="c-form__button" type="submit" value="Enviar">
+                </div>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
