Added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             </div>
             <nav class="c-header__navbar">
                 <ul class="c-header__list">
-                    <li class="c-header__item"><a href="#" class="c-header__link">Verifica</a></li>
-                    <li class="c-header__item"><a href="#" class="c-header__link">Calendario</a></li>
-                    <li class="c-header__item"><a href="#" class="c-header__link">Beneficios</a></li>
-                    <li class="c-header__item"><a href="#" class="c-header__link">Medio Ambiente</a></li>
-                    <li class="c-header__item"><a href="#" class="c-header__link">Preguntas frecuentes</a></li>
+                    <li class="c-header__item"><a href="#que-es" class="c-header__link">¿Qué es?</a></li>
+                    <li class="c-header__item"><a href="#calendario" class="c-header__link">Calendario</a></li>
+                    <li class="c-header__item"><a href="#beneficios" class="c-header__link">Beneficios</a></li>
+                    <li class="c-header__item"><a href="#tortuga" class="c-header__link">Medio Ambiente</a></li>
+                    <li class="c-header__item"><a href="#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
+                    <li class="c-header__item"><a href="#contacto" class="c-header__link">Verifica</a></li>
                 </ul>
             </nav>
         </div>
@@ -56,7 +57,7 @@
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
-                            <a href="#" class="c-cta">Agendar cita</a>
+                            <a href="#verifica" class="c-cta">Agendar cita</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +89,7 @@
                         </div>
                         <p class="c-benefits__alert">Evita ser multado</p>
                         <div class="u-arranger u-arranger--center">
-                            <a href="#" class="c-cta">Agendar cita</a>
+                            <a href="#verifica" class="c-cta">Agendar cita</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +115,7 @@
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
-                            <a href="#" class="c-cta c-cta--hollow">Conocer más</a>
+                            <a href="#tortuga" class="c-cta c-cta--hollow">Conocer más</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +146,7 @@
                 <div class="c-calendar__cell">Noviembre - Diciembre</div>
             </div>
             <div class="u-arranger u-arranger--center">
-                <a class="c-cta" href="#">Quiero verificar</a>
+                <a class="c-cta" href="#verifica">Quiero verificar</a>
             </div>
         </div>
     </section>
@@ -163,7 +164,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3759.559590617052!2d-96.92843418455355!3d19.560512586811786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85db31df4ea00f9f%3A0xffb9dc8f7e8210cf!2sCentro%20de%20Verificaci%C3%B3n%20Vehicular%20Autorizado%20C-XL-02!5e0!3m2!1ses!2smx!4v1573581227151!5m2!1ses!2smx" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 </div>
                 <div class="u-arranger u-arranger--center">
-                    <a href="#" class="c-cta">Quiero agendar</a>
+                    <a href="#verifica" class="c-cta">Quiero agendar</a>
                     <a href="https://www.google.com/maps/dir//19.5605126,-96.9262455/@19.560513,-96.926245,16z?hl=es" class="c-cta c-cta--hollow">¿Cómo llegar?</a>
                 </div>
             </div>
@@ -186,8 +187,8 @@
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
-                            <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
-                            <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
+                            <a href="#verifica" class="c-cta c-cta--green">Quiero Apoyar</a>
+                            <a href="#guacamaya" class="c-cta c-cta--green-hollow">Conocer más</a>
                         </div>
                     </div>
                 </div>
@@ -219,7 +220,7 @@
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
-                            <a href="#" class="c-cta c-cta--green">Quiero Apoyar</a>
+                            <a href="#verifica" class="c-cta c-cta--green">Quiero Apoyar</a>
                             <a href="#" class="c-cta c-cta--green-hollow">Conocer más</a>
                         </div>
                 </div>
@@ -240,12 +241,12 @@
                 <h3 class="c-faqs__question">¿Cuál es el costo de la verificación?</h3>
                 <p class="c-faqs__answer">La prueba de verificación tieneu un consto único de <strong>$365.20 M.N.</strong></p>
                 <div class="u-arranger u-arranger--center">
-                    <a href="#" class="c-cta">Quiero verificar</a>
+                    <a href="#verifica" class="c-cta">Quiero verificar</a>
                 </div>
             </div>
         </div>
     </section>
-    <section id="contacto">
+    <section id="verifica">
         <div class="u-wrapper">
             <form class="c-form" action="">
                 <h3 class="c-form__title" >Agenda tu cita</h3>
@@ -284,5 +285,6 @@
     <footer class="c-footer">
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
+    <script src="./js/zenscroll-min.js"></script>
 </body>
 </html>
