add --mini modifier to cta component

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li class="c-header__item"><a href="#beneficios" class="c-header__link">Beneficios</a></li>
                     <li class="c-header__item"><a href="#tortuga" class="c-header__link">Medio Ambiente</a></li>
                     <li class="c-header__item"><a href="#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
-                    <li class="c-header__item"><a href="#contacto" class="c-header__link">Verifica</a></li>
+                    <li class="c-header__item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
                 </ul>
             </nav>
         </div>
