Added responsive for iphone 8 plus

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             </div>
                             <div class="c-benefits__list-item">
                                 <div class="c-benefits__list-item__bullet">2</div>
-                                <p class="c-benefits__list-item__title">Apoyas proyextos de desarrollo para conservar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
+                                <p class="c-benefits__list-item__title">Apoyas proyectos de desarrollo para conservar, preservar al medio ambiente y mitigar los efectos nocivos de nuestras actividades cotidianas.</p>
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
