minor style fixes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <div class="c-benefits__list-item">
                                 <div class="c-benefits__list-item__bullet c-benefits__list-item__bullet">2</div>
                                 <p class="c-benefits__list-item__title c-benefits__list-item__title">Diesel</p>
-                                <p class="c-benefits__list-item__text">Será inspeccionada la composición de las emisiones de los automotores a diésel, sin importar su año, mode o peso, mediante un opacimetro.</p>
+                                <p class="c-benefits__list-item__text">Será inspeccionada la composición de las emisiones de los automotores a diésel, sin importar su año, modelo o peso, mediante un opacímetro.</p>
                             </div>
                         </div>
                         <div class="u-arranger u-arranger--center">
@@ -107,7 +107,7 @@
                             </div>
                             <div class="c-benefits__list-item">
                                 <div class="c-benefits__list-item__bullet">3</div>
-                                <p class="c-benefits__list-item__title">Aumentas la vida útil de tu vehiculo afinandolo periodicamente.</p>
+                                <p class="c-benefits__list-item__title">Aumentas la vida útil de tu vehiculo afinándolo periódicamente.</p>
                             </div>
                             <div class="c-benefits__list-item">
                                 <div class="c-benefits__list-item__bullet">4</div>
@@ -124,7 +124,7 @@
     </section>
     <section id="calendario">
         <div class="u-wrapper">
-            <h2 class="c-heading">¿Cuando debo verificar?</h2>
+            <h2 class="c-heading">¿Cuándo debo verificar?</h2>
             <div class="c-calendar">
                 <div class="c-calendar__cell c-calendar__cell--heading">Terminación de Placas</div>
                 <div class="c-calendar__cell c-calendar__cell--heading">Primer Periodo</div>
