Fixed grammatical errors

--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                 <h3 class="c-faqs__question">¿Quiénes tienen que verificar su vehículo?</h3>
                 <p class="c-faqs__answer">Todos los propietarios o conductores de vehículos automotores de servicio público o privado en circulación matriculados en el estado de Veracruz.</p>
                 <h3 class="c-faqs__question">¿Qué tipo de holograma puedo obtener?</h3>
-                <p class="c-faqs__answer">En nuestro centro, dependiendo tu vehículo podrás obtener un <strong>Hologram Estatal E</strong> si tu vehículo se verificó a través de prueba estática u <strong>Holograma Estatal D</strong> si tu vehículo se verificó a través de prueba por opacidad.</p>
+                <p class="c-faqs__answer">En nuestro centro, dependiendo de tu vehículo, podrás obtener un <strong>Holograma Estatal E</strong> si tu vehículo se verificó a través de prueba estática u <strong>Holograma Estatal D</strong> si tu vehículo se verificó a través de prueba por opacidad.</p>
                 <h3 class="c-faqs__question">¿Cuál es el costo de la verificación?</h3>
-                <p class="c-faqs__answer">La prueba de verificación tieneu un consto único de <strong>$365.20 M.N.</strong></p>
+                <p class="c-faqs__answer">La prueba de verificación tiene un costo único de <strong>$365.20 M.N.</strong></p>
                 <div class="u-arranger u-arranger--center">
                     <a href="#verifica" class="c-cta">Quiero verificar</a>
                 </div>
