Added mobile menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="u-wrapper">
             <div class="c-header__logo">
             </div>
-            <nav class="c-header__navbar">
+            <nav class="c-header__navbar" id="menu">
                 <ul class="c-header__list">
                     <li class="c-header__item"><a href="#que-es" class="c-header__link">¿Qué es?</a></li>
                     <li class="c-header__item"><a href="#beneficios" class="c-header__link">Beneficios</a></li>
@@ -21,6 +21,12 @@
                     <li class="c-header__item"><a href="#tortuga" class="c-header__link">Medio Ambiente</a></li>
                     <li class="c-header__item"><a href="#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
                     <li class="c-header__item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                </ul>
+            </nav>
+            <nav class="c-header__mobile-navbar">
+                <ul class="c-header__mobile-list">
+                    <li class="c-header__mobile-item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__mobile-item"><a id="menu-button" class="c-header__link c-header__link--menu">Menú</a></li>
                 </ul>
             </nav>
         </div>
@@ -286,5 +292,20 @@
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
     <script src="./js/zenscroll-min.js"></script>
+    <script>
+        const menuButton = document.querySelector('#menu-button')
+        const menu = document.querySelector('#menu')
+        const menuItems = document.querySelectorAll('.c-header__item')
+        
+        menuButton.addEventListener('click', () => {
+            menu.classList.toggle('c-header__navbar--active')
+        })
+
+        menuItems.forEach(item => {
+            item.addEventListener('click', () => {
+                menu.classList.remove('c-header__navbar--active')
+            })
+        })
+    </script>
 </body>
 </html>
