minor text changes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </header>
     <section class="c-hero">
         <div class="u-wrapper">
-            <h1 class="c-hero__title">Centro de Verificación XL-02</h1>
-            <h2 class="c-hero__subtitle">A tu servicio desde 1992</h2>
+            <h1 class="c-hero__title">Centro de Verificación C-XL-02</h1>
+            <h2 class="c-hero__subtitle">A tu servicio desde 1991</h2>
             <a class="c-cta c-cta--big" href="#verifica">Agenda una cita</a>
         </div>
     </section>
