Added basic styles to blog component

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -33,22 +33,30 @@
     </header>
     <main class="c-blog">
         <div class="c-blog__cover">
-            <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular? 5 Tips.</h1>
+            <div class="u-wrapper">
+                <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular? 5 Tips.</h1>
+            </div>
         </div>
-        <div class="c-blog__body">
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-            <h2 class="c-blog__subtitle">Que nuestro auto esté correctamente afinado.</h2>
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-            <h2 class="c-blog__subtitle">Que no tenga fugas en sistema de escape.</h2>
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-            <h2 class="c-blog__subtitle">Que tenga válvula, PCV, tapón de aceite y bayoneta.</h2>
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-            <h2 class="c-blog__subtitle">Que esté en buen estado el convertidor catalítico.</h2>
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-            <h2 class="c-blog__subtitle">Que esté en buen estado los sensores de oxígeno.</h2>
-            <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+        <div class="u-wrapper">
+            <div class="c-blog__body">
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <h2 class="c-blog__subtitle">Que nuestro auto esté correctamente afinado.</h2>
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <h2 class="c-blog__subtitle">Que no tenga fugas en sistema de escape.</h2>
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <h2 class="c-blog__subtitle">Que tenga válvula, PCV, tapón de aceite y bayoneta.</h2>
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <h2 class="c-blog__subtitle">Que esté en buen estado el convertidor catalítico.</h2>
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <h2 class="c-blog__subtitle">Que esté en buen estado los sensores de oxígeno.</h2>
+                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <div class="c-blog__cta-section">
+                    <p class="c-blog__cta-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repudiandae dolore quidem beatae necessitatibus tenetur.</p>
+                    <a href="#" class="c-cta">Agenda tu cita</a>
+                </div>
+            </div>
         </div>
-    </main>
+        </main>
     <footer class="c-footer">
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
