Created cta-banner component

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -50,13 +50,16 @@
                 <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
                 <h2 class="c-blog__subtitle">Que esté en buen estado los sensores de oxígeno.</h2>
                 <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <div class="c-blog__cta-section">
-                    <p class="c-blog__cta-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat repudiandae dolore quidem beatae necessitatibus tenetur.</p>
-                    <a href="#" class="c-cta">Agenda tu cita</a>
-                </div>
             </div>
         </div>
-        </main>
+        <div class="c-cta-banner">
+            <div class="u-wrapper">
+                <h3 class="c-cta-banner__title">Verificación Cuevas</h3>
+                <p class="c-cta-banner__text">No esperes a ser multado, verifica a tiempo. Agenda tu cita y no hagas fila</p>
+                <a href="#" class="c-cta-banner__button">Agendar</a>
+            </div>
+        </div>
+    </main>
     <footer class="c-footer">
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
