--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -37,7 +37,7 @@
                 <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular? 5 Tips.</h1>
             </div>
         </div>
-        <div class="u-wrapper">
+        <div class="u-wrapper u-wrapper--blog">
             <div class="c-blog__body">
                 <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
                 <h2 class="c-blog__subtitle">Que nuestro auto esté correctamente afinado.</h2>
@@ -53,9 +53,12 @@
             </div>
         </div>
         <div class="c-cta-banner">
-            <div class="u-wrapper">
+            <div class="u-wrapper u-wrapper--blog">
                 <h3 class="c-cta-banner__title">Verificación Cuevas</h3>
-                <p class="c-cta-banner__text">No esperes a ser multado, verifica a tiempo. Agenda tu cita y no hagas fila</p>
+                <h4 class="c-cta-banner__subtitle">Centro de Verificación Vehicular Autorizado C-XL-02</h4>
+                <a href="#" class="c-cta-banner__link">Ma. Enriqueta Camarillo #6. Xalapa, Ver.</a>
+                <a href="tel:+522288156209" class="c-cta-banner__link">Tel: (228) 8-15-62-09</a>
+                <p class="c-cta-banner__text">¡No esperes a ser multado! Agenda tu cita y no vuelvas a hacer filas</p>
                 <a href="#" class="c-cta-banner__button">Agendar</a>
             </div>
         </div>
