Refined blog list styles

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -37,19 +37,33 @@
                 <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular? 5 Tips.</h1>
             </div>
         </div>
-        <div class="u-wrapper u-wrapper--blog">
+        <div class="u-wrapper">
             <div class="c-blog__body">
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <h2 class="c-blog__subtitle">Que nuestro auto esté correctamente afinado.</h2>
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <h2 class="c-blog__subtitle">Que no tenga fugas en sistema de escape.</h2>
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <h2 class="c-blog__subtitle">Que tenga válvula, PCV, tapón de aceite y bayoneta.</h2>
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <h2 class="c-blog__subtitle">Que esté en buen estado el convertidor catalítico.</h2>
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
-                <h2 class="c-blog__subtitle">Que esté en buen estado los sensores de oxígeno.</h2>
-                <p class="c-blog__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                <div class="c-blog__list-item">
+                    <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">1.</div>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que nuestro auto esté correctamente afinado</h3>
+                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                </div>
+                <div class="c-blog__list-item">
+                    <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">2.</div>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que no tenga fugas en el sistema de escape</h3>
+                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                </div>
+                <div class="c-blog__list-item">
+                    <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">3.</div>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que tenga válvula, PCV, tapón de aceite y bayoneta</h3>
+                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                </div>
+                <div class="c-blog__list-item">
+                    <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">4.</div>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que esté en buen estado el convertidor catalítico.</h3>
+                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                </div>
+                <div class="c-blog__list-item">
+                    <div class="c-blog__list-item__bullet c-blog__list-item__bullet--money">5.</div>
+                    <h3 class="c-blog__list-item__title c-blog__list-item__title--money">Que esté en buen estado los sensores de oxígeno.</h3>
+                    <p class="c-blog__list-item__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quis velit totam tempore quam, officiis nesciunt soluta deserunt, incidunt sed vero doloribus ab, commodi repudiandae optio eligendi obcaecati ex omnis?</p>
+                </div>
             </div>
         </div>
         <div class="c-cta-banner">
