Minor changes to footer component styles

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -66,17 +66,20 @@
                 </div>
             </div>
         </div>
-        <div class="c-cta-banner">
-            <div class="u-wrapper u-wrapper--blog">
-                <h3 class="c-cta-banner__title">Verificación Cuevas</h3>
-                <h4 class="c-cta-banner__subtitle">Centro de Verificación Vehicular Autorizado C-XL-02</h4>
-                <a href="#" class="c-cta-banner__link">Ma. Enriqueta Camarillo #6. Xalapa, Ver.</a>
-                <a href="tel:+522288156209" class="c-cta-banner__link">Tel: (228) 8-15-62-09</a>
-                <p class="c-cta-banner__text">¡No esperes a ser multado! Agenda tu cita y no vuelvas a hacer filas</p>
-                <a href="#" class="c-cta-banner__button">Agendar</a>
-            </div>
-        </div>
     </main>
+    <section class="c-cta-banner">
+        <div class="u-wrapper u-wrapper--blog">
+            <h3 class="c-cta-banner__title">Verificación Cuevas</h3>
+            <h4 class="c-cta-banner__subtitle">Centro de Verificación Vehicular Autorizado C-XL-02</h4>
+            <a href="#" class="c-cta-banner__link">Ma. Enriqueta Camarillo #6. Xalapa, Ver.</a>
+            <a href="tel:+522288156209" class="c-cta-banner__link">Tel: (228) 8-15-62-09</a>
+            <p class="c-cta-banner__text">¡No esperes a ser multado! Agenda tu cita y no vuelvas a hacer filas</p>
+            <a href="#" class="c-cta-banner__button">Agendar</a>
+        </div>
+    </section>
+    <section class="c-suggestions">
+
+    </section>
     <footer class="c-footer">
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
