Created suggestions & card components

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -77,9 +77,45 @@
             <a href="#" class="c-cta-banner__button">Agendar</a>
         </div>
     </section>
-    <section class="c-suggestions">
-
-    </section>
+    <div class="u-wrapper">
+        <div class="c-suggestions">
+            <p class="c-suggestions__title">Te recomendamos leer</p>
+            <div class="c-suggestions__cards-container">
+                <div class="c-card">
+                    <a href="#" class="c-card__link"></a>
+                    <img class="c-card__cover" src="./img/vw-bug.jpg" alt="">
+                    <div class="c-card__text-container">
+                        <p class="c-card__title">No pasé la verificación ¿Ahora qué hago?</p>
+                        <p class="c-card__preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dignissimos ullam ad quia sed impedit et ex dolorem totam odit.</p>
+                    </div>
+                </div>
+                <div class="c-card">
+                    <a href="#" class="c-card__link"></a>
+                    <img class="c-card__cover" src="./img/tools.jpg" alt="">
+                    <div class="c-card__text-container">
+                        <p class="c-card__title">¿Mi auto tiene que verificar?</p>
+                        <p class="c-card__preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dignissimos ullam ad quia sed impedit et ex dolorem totam odit.</p>
+                    </div>
+                </div>
+                <div class="c-card">
+                    <a href="#" class="c-card__link"></a>
+                    <img class="c-card__cover" src="./img/car-engine-2.jpg" alt="">
+                    <div class="c-card__text-container">
+                        <p class="c-card__title">¿Por qué verificar?</p>
+                        <p class="c-card__preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dignissimos ullam ad quia sed impedit et ex dolorem totam odit.</p>
+                    </div>
+                </div>
+                <div class="c-card">
+                    <a href="#" class="c-card__link"></a>
+                    <img class="c-card__cover" src="./img/mexico.jpg" alt="">
+                    <div class="c-card__text-container">
+                        <p class="c-card__title">¿Qué es el no circula?</p>
+                        <p class="c-card__preview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dignissimos ullam ad quia sed impedit et ex dolorem totam odit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="c-footer">
         <a class="c-footer__credit" href="https://dobletaptap.com" target="_blank">Desarrollado por DobleTapTap</a>
     </footer>
