--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
     <header class="c-header">
         <div class="u-wrapper">
-            <div class="c-header__logo">
-            </div>
+            <a href="#">
+                <img class="c-header__logo" src="./img/logo-white.svg" alt="">
+            </a>
             <nav class="c-header__navbar" id="menu">
                 <ul class="c-header__list">
                     <li class="c-header__item"><a href="#que-es" class="c-header__link">¿Qué es?</a></li>
