added iphone-8-plus styles to blog component

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -35,7 +35,7 @@
     <main class="c-blog">
         <div class="c-blog__cover">
             <div class="u-wrapper">
-                <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular? 5 Tips.</h1>
+                <h1 class="c-blog__title">¿Cómo pasar la verificación vehicular?<br>5 Tips.</h1>
             </div>
         </div>
         <div class="u-wrapper">
